fix dishdetail fixed footer overlap

--- a/dmwa/public/stylesheets/theme.css
+++ b/dmwa/public/stylesheets/theme.css
@@ -33,6 +33,7 @@
 #dd-header-container{
 	height: 67px;
 	text-align: center;
+	line-height: 1.2;
 }
 
 .dd-header-bk-button{
@@ -45,7 +46,6 @@
 .dd-header-title{
 	top: 26%;
 	padding: 0 0 0 0;
-	line-height: 1.2;
 	font-size: 18px;
 	width: 56%;
 }
@@ -70,6 +70,7 @@
 	padding-top: 67px;
 	background-color: #f5f5f5;
 	margin-bottom: 0;
+	padding-bottom: 80px;
 }
 
 .dd-panel-group{
@@ -89,6 +90,10 @@
 	border: none;
 	padding-top: 10px;
 	padding-bottom: 5px;
+}
+
+.dd-footer-info{
+	padding: 0;
 }
 
 /* Global */
